Fix flex alignments

--- a/styles.css
+++ b/styles.css
@@ -44,24 +44,26 @@ a{
     background-repeat: no-repeat;
     background-position: center center;
     color: var(--illustration-text);
+    justify-content: space-between;
 }
 .brand,
 .reference{
     display: flex;
     flex: auto;
-    justify-content: center;
+    align-items: center;
 }
 .brand{
-    align-items: center;
     padding: 1rem;
-    max-width: 8rem;
+    max-width: max-content;
     max-height: 5rem;
     background-color: #d2b48c;
     font-family: norwesterregular, Arial, Helvetica, sans-serif;
     font-size: 2.5rem;
 }
 .reference{
-    align-items: flex-end;
+    align-self: center;
+    max-height: 2rem;
+    max-width: max-content;
     margin: 1rem;
 }
 form,
@@ -91,7 +93,6 @@ h1{
 }
 .questions > div{
     flex-direction: column;
-    justify-content: center;
     padding: 0.8rem var(--form-spacing);
     flex: 0 1 min(var(--input-max-length), 50%);
     font-size: 1.1rem;
